[gd_scene load_steps=8 format=3 uid="uid://b1d6yoahtlbw4"]

[ext_resource type="Texture2D" uid="uid://bkxp1c702ohv2" path="res://Sprites/fuel1.png" id="1_dhs3b"]
[ext_resource type="Script" path="res://Scripts/Fuel.gd" id="1_h1l8i"]
[ext_resource type="Texture2D" uid="uid://d4amma3lrt3q0" path="res://Sprites/fuel2.png" id="2_1at1p"]
[ext_resource type="Texture2D" uid="uid://cdxbh8o4auu3m" path="res://Sprites/fuel3.png" id="3_3y1cx"]
[ext_resource type="Texture2D" uid="uid://n8mh5vhho8nb" path="res://Sprites/fuel4.png" id="4_8miyg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_j21d4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dhs3b")
}, {
"duration": 1.0,
"texture": ExtResource("2_1at1p")
}, {
"duration": 1.0,
"texture": ExtResource("3_3y1cx")
}, {
"duration": 1.0,
"texture": ExtResource("4_8miyg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sdqfy"]
radius = 7.0

[node name="Fuel" type="Area2D"]
script = ExtResource("1_h1l8i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j21d4")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sdqfy")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
